--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Document</title>
 </head>
 <body>
-    <!--header-->
-    <div class="topo">
-        <div class="header"></div>
-    </div>
-    <!--body-->
-    <div class="body">
-        <div class="nav"></div>
-        <div class="main"></div>
-        <div class="nav"></div>
-    </div>
-    <!--footer-->
-    <div class="baixo">
-        <div class="footer"></div>
-    </div>
+
+  <div class="topo">
+    <div class="header"><h1>HEADER</h1></div>
+  </div>
+
+  <div class="body">
+    <div class="nav"><h1>NAV</h1></div>
+    <div class="main"><h1>MAINCONTENT</h1></div>
+    <div class="nav"><h1>SIDEBAR</h1></div>
+  </div>
+
+  <div class="baixo">
+    <div class="footer"><h1>FOOTER</h1></div>
+  </div>
+
 </body>
 </html>
